Fix massive nav on mobile

--- a/_sass/layout.scss
+++ b/_sass/layout.scss
@@ -21,7 +21,7 @@ body {
       "m"
       "n"
       "f";
-    grid-template-rows: 120px 1fr 1fr 100px;
+    grid-template-rows: 120px 1fr auto 100px;
     grid-template-columns: 1fr;
   }
 }
